@@ -6,6 +6,8 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.37.0
 
+              Build: fix Darwin build.
+
               Build: remove unnecessary limit of 200 characters on
               argument length in Libopt.
 
